--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 <header>
-    <button class="toggle-color-scheme icon-button">
+    <button class="toggle-color-scheme icon-button" onclick="toggleColorScheme()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-sun"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>
     </button>
     <div class="social-media">
@@ -13,7 +13,7 @@
         <a href="https://twitter.com/joshgermon" class="twitter icon-button ghost">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
         </a>
-        <a href="https://linkedin.com/joshgermon" class="linkedin icon-button ghost">
+        <a href="https://linkedin.com/in/joshgermon" class="linkedin icon-button ghost">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
         </a>
     </div>
@@ -44,12 +44,26 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
         width: 2.5rem;
         height: 2.5rem;
         border: 1px solid var(--border-color);
         border-radius: 4px;
+        transition: background-color 300ms ease;
+    }
+    .icon-button:hover {
+        background-color: rgba(255, 255, 255, 0.1);
     }
     .icon-button.ghost {
         border: none;
     }
 </style>
+<script is:inline>
+    function toggleColorScheme() {
+        if(document.body.classList.contains('light')) {
+            document.body.classList.remove('light');
+        }else {
+            document.body.classList.add('light');
+        }
+    }
+</script>
