--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props as Props;
 		<link href="https://fonts.googleapis.com/css2?family=Manrope&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet"> 
 		<title>{title}</title>
 	</head>
-	<body class="light">
+	<body>
 		<Header />
 		<main>
 			<slot />
