Update: Light Dark CSS Transitions

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,6 +28,7 @@
     }
     header svg * {
         stroke: var(--body-color);
+        transition: stroke 300ms ease;
     }
     .color-toggle svg {
     }
@@ -49,7 +50,7 @@
         height: 2.5rem;
         border: 1px solid var(--border-color);
         border-radius: 4px;
-        transition: background-color 300ms ease;
+        transition: background-color 300ms ease, border-color 300ms ease;
     }
     .icon-button:hover {
         background-color: rgba(255, 255, 255, 0.1);
