--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,8 +35,8 @@ const { title } = Astro.props as Props;
 		--bg-color-dark: #171a21;
 		--body-color-light: #171a21;
 		--body-color-dark: #fbf5f3;
-		--border-color-light: #8c8e91;
-		--border-color-dark: #646362;
+		--border-color-light: #cbcfd4;
+		--border-color-dark: #454342;
 		--body-font-size: 1rem;
 		--heading-font: 'Space Grotesk', sans-serif;
   		--body-font: Manrope, sans-serif;
@@ -74,7 +74,7 @@ const { title } = Astro.props as Props;
 		transition: color 300ms ease;
 	}
 	p {
-		transition: background-color 300ms ease;
+		transition: color 300ms ease;
 	}
 	main {
 		padding-top: 3.5rem;
