--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,20 +1,20 @@
 ---
-
+import { Icon } from 'astro-icon'
 ---
 
 <header>
     <button class="toggle-color-scheme icon-button" onclick="toggleColorScheme()" aria-label="Toggle Color Scheme">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-sun"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>
+        <Icon pack="lucide" name="sun" />
     </button>
     <div class="social-media">
         <a href="https://github.com/joshgermon" class="github icon-button ghost">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+            <Icon pack="lucide" name="github" />
         </a>
         <a href="https://twitter.com/joshgermon" class="twitter icon-button ghost">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
+            <Icon pack="lucide" name="twitter" />
         </a>
         <a href="https://linkedin.com/in/joshgermon" class="linkedin icon-button ghost">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+            <Icon pack="lucide" name="linkedin" />
         </a>
     </div>
 </header>
@@ -30,24 +30,18 @@
         stroke: var(--body-color);
         transition: stroke 300ms ease;
     }
-    .color-toggle svg {
-    }
     .social-media {
         display: flex;
         gap: 0.5rem;
-
-    }
-    .social-media a {
         color: var(--body-color);
-        text-decoration: none;
     }
     .icon-button {
+        width: 2.5rem;
+        height: 2.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        width: 2.5rem;
-        height: 2.5rem;
         border: 1px solid var(--border-color);
         border-radius: 4px;
         transition: background-color 300ms ease, border-color 300ms ease;
