Update: Blog Launch

--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -30,7 +30,7 @@
 		margin: 0 auto;
 		line-height: 1.75;
 		padding: 0 1.5rem;
-		transition: background-color 300ms ease;
+		transition: background-color 300ms ease, color 300ms ease;;
 	}
 	body.light {
 		--bg-color: var(--bg-color-light);
@@ -43,7 +43,7 @@
 		font-weight: 500;
 		transition: color 300ms ease;
 	}
-	p {
+	span, p, a, button, li {
 		transition: color 300ms ease;
 	}
     a, button {
