--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,28 +1,11 @@
 ---
-import GlobalStyles from '../components/GlobalStyles.astro';
+import Head from '../components/Head.astro';
 import Header from '../components/Header.astro';
-export interface Props {
-	title: string;
-}
-
-const { title } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Developer and designer experimenting with technology to create digital experiences and trying to push the boundaries of what is expected and safe.">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<script src="https://unpkg.com/feather-icons"></script>
-		<link href="https://fonts.googleapis.com/css2?family=Manrope&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet"> 
-		<title>{title}</title>
-		<GlobalStyles />
-	</head>
+	<Head />
 	<body>
 		<Header />
 		<main>
