Update: Hover colour & link styling

--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -6,7 +6,9 @@
 		--body-color-light: #171a21;
 		--body-color-dark: #fbf5f3;
 		--border-color-light: #cbcfd4;
-		--border-color-dark: #454342;
+		--border-color-dark: #434a5b;
+		--hover-color-light: #efe8e6;
+		--hover-color-dark: #2f3645;
 		--body-font-size: 1rem;
 		--heading-font: 'Space Grotesk', sans-serif;
   		--body-font: Manrope, sans-serif;
@@ -22,6 +24,7 @@
 		--bg-color: var(--bg-color-dark);
 		--body-color: var(--body-color-dark);
 		--border-color: var(--border-color-dark);
+		--hover-color: var(--hover-color-dark);
 		font-size: var(--body-font-size);
 		font-family: var(--body-font);
 		background-color: var(--bg-color);
@@ -36,7 +39,14 @@
 		--bg-color: var(--bg-color-light);
 		--body-color: var(--body-color-light);
 		--border-color: var(--border-color-light);
+		--hover-color: var(--hover-color-light);
 	}
+    ul {
+        padding: 0 1rem;
+    }
+    li {
+        margin-bottom: 1rem;
+    }
 	h1, h2, h3, h4, h5, h6 {
 		font-family: var(--heading-font);
 		line-height: 1.25;
