--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const posts = await Astro.glob('../pages/posts/*.md');
 		padding: 1rem 1.333rem
 	}
 	article:hover {
-		background: rgba(255, 255, 255, 0.1);
+		background-color: var(--hover-color);
 	}
 	article h2 {
 		font-size: 1rem;
