--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -19,7 +19,7 @@ const { variant } = Astro.props;
         padding: 0.75rem 1rem
     }
     button:hover{
-        background: rgba(255, 255, 255, 0.1);;
+        background-color: var(--hover-color);
     }
     button.ghost {
         border: none;
