--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -47,7 +47,7 @@ import { Icon } from 'astro-icon'
         transition: background-color 300ms ease, border-color 300ms ease;
     }
     .icon-button:hover {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: var(--hover-color);
     }
     .icon-button.ghost {
         border: none;
