--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -20,7 +20,7 @@ const { href, variant } = Astro.props;
         padding: 0.75rem 1rem
     }
     a:hover{
-        background: rgba(255, 255, 255, 0.1);;
+        background-color: var(--hover-color);
     }
     a.ghost {
         border: none;
