Spacing/padding reduction

--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -16,6 +16,7 @@
 	html, body {
 		margin: 0;
 		padding: 0;
+        min-height: 100vh;
 	}
 	* {
 		box-sizing: border-box;
@@ -63,7 +64,7 @@
         text-decoration: none;
     }
 	main {
-		padding-top: 2rem;
+		padding: 1.5rem 0 4rem 0;
 	}
     [astro-icon] {
         color: var(--body-color);
