--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 const posts = await Astro.glob('../pages/posts/*.md');
+posts.sort((a, b) => Date.parse(b.frontmatter.date) - Date.parse(a.frontmatter.date));
 ---
 
 <Layout title="Joshua Germon">
@@ -29,7 +30,7 @@ const posts = await Astro.glob('../pages/posts/*.md');
 
 	h1 {
 		font-size: 1.333rem;
-		margin: 2rem 0;
+		margin-bottom: 2rem;
 	}
 
 	h2 {
