--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -5,7 +5,7 @@ import LinkButton from '../components/LinkButton.astro';
 import { Icon } from 'astro-icon';
 
 export interface Props {
-	title: string;
+    title: string;
 }
 
 const { content } = Astro.props;
@@ -13,23 +13,19 @@ const { content } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-	<Head />
-	<body>
-		<Header />
-		<main>
-            <article>
-                <slot />
-            </article>
-            <LinkButton href="/" variant="ghost">
-                <Icon name="bi:arrow-return-left" />
-                All Posts
-            </LinkButton>
-		</main>
-	</body>
-</html>
 
-<style>
-    article {
-        padding-bottom: 1rem;
-    }
-</style>
+<Head />
+
+<body>
+    <Header />
+    <main>
+        <article>
+            <slot />
+        </article>
+        <LinkButton href="/" variant="ghost">
+            <Icon name="bi:arrow-return-left" /> All Posts
+        </LinkButton>
+    </main>
+</body>
+
+</html>
