Added aria labels

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,13 +7,13 @@ import { Icon } from 'astro-icon'
         <Icon pack="lucide" name="sun" />
     </button>
     <div class="social-media">
-        <a href="https://github.com/joshgermon" class="github icon-button ghost">
+        <a href="https://github.com/joshgermon" aria-label="Github" class="github icon-button ghost">
             <Icon pack="lucide" name="github" />
         </a>
-        <a href="https://twitter.com/joshgermon" class="twitter icon-button ghost">
+        <a href="https://twitter.com/joshgermon" aria-label="Twitter" class="twitter icon-button ghost">
             <Icon pack="lucide" name="twitter" />
         </a>
-        <a href="https://linkedin.com/in/joshgermon" class="linkedin icon-button ghost">
+        <a href="https://linkedin.com/in/joshgermon" aria-label="Linkedin" class="linkedin icon-button ghost">
             <Icon pack="lucide" name="linkedin" />
         </a>
     </div>
