--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,18 +1,13 @@
 ---
-import Head from '../components/Head.astro';
+import Footer from '../components/Footer.astro';
+import Document from '../components/Document.astro';
 import Header from '../components/Header.astro';
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<Head />
-	<body>
-		<Header />
-		<main>
-			<slot />
-		</main>
-	</body>
-</html>
-
-
-
+<Document>
+	<Header />
+	<main>
+		<slot />
+	</main>
+	<Footer />
+</Document>
