--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,22 +1,15 @@
 ---
-import Head from '../components/Head.astro';
+import Document from '../components/Document.astro'
 import Header from '../components/Header.astro';
 import LinkButton from '../components/LinkButton.astro';
 import { Icon } from 'astro-icon';
+import Footer from '../components/Footer.astro';
 
 export interface Props {
     title: string;
 }
-
-const { content } = Astro.props;
 ---
-
-<!DOCTYPE html>
-<html lang="en">
-
-<Head />
-
-<body>
+<Document>
     <Header />
     <main>
         <article>
@@ -26,6 +19,5 @@ const { content } = Astro.props;
             <Icon name="bi:arrow-return-left" /> All Posts
         </LinkButton>
     </main>
-</body>
-
-</html>
+    <Footer />
+</Document>
