SSR Netlify & Spotify Now Playing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,10 @@
 ---
+import NowPlaying from "../components/NowPlaying.astro";
 import ThemeToggle from "./ThemeToggle.svelte";
 ---
 
 <footer>
-    <p>Thanks for visiting</p>
+    <NowPlaying />
     <ThemeToggle client:load />
 </footer>
 
