--- a/src/components/NowPlaying.astro
+++ b/src/components/NowPlaying.astro
@@ -1,6 +1,5 @@
 ---
-import { Icon } from 'astro-icon';
-const req = await fetch('https://api.spotify.com/v1/me/player/currently-playing', {
+const req = await fetch('https://api.spotify.com/v1/me/player/currently-playing?market=au', {
     headers: {
         Authorization:
             'Bearer BQCYNrzvTW15c4sZK0Zpw1rfNQ8yvU4Z7ahvgtxcfZBEAgtihb9BT1L8e9ymRco15jRPmNx0R8xrA6Iv16tkjgGZ_wg598pkKVYLa6zTpi7Sv1k5ooDGhL--8qG_oKF7yzHl9663cSMaPqMEQHdj5F0HY50QZAhhFSMdNGr2jnzsDs-PLQABQeSD0Oga1i_SaNIzQove2Ehz',
@@ -10,16 +9,18 @@ const nowPlaying = await req.json();
 ---
 
 <div class="now-playing">
-    
-    <p><Icon pack="ci" name="spotify" /> { nowPlaying.item.name ? <a href={nowPlaying.context.external_urls.spotify}>{nowPlaying.item.name} - {nowPlaying.item.artists[0].name}</a> : 'Not Playing' } </p>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-spotify"
+        viewBox="0 0 16 16">
+        <path
+            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.669 11.538a.498.498 0 0 1-.686.165c-1.879-1.147-4.243-1.407-7.028-.77a.499.499 0 0 1-.222-.973c3.048-.696 5.662-.397 7.77.892a.5.5 0 0 1 .166.686zm.979-2.178a.624.624 0 0 1-.858.205c-2.15-1.321-5.428-1.704-7.972-.932a.625.625 0 0 1-.362-1.194c2.905-.881 6.517-.454 8.986 1.063a.624.624 0 0 1 .206.858zm.084-2.268C10.154 5.56 5.9 5.419 3.438 6.166a.748.748 0 1 1-.434-1.432c2.825-.857 7.523-.692 10.492 1.07a.747.747 0 1 1-.764 1.288z" />
+    </svg>
+    <p>{ nowPlaying.item?.name ? <a href={nowPlaying.context.external_urls.spotify}>{nowPlaying.item.name} -
+            {nowPlaying.item.artists[0].name}</a> : 'Not Playing' } </p>
 </div>
-
 <style lang="scss">
     .now-playing {
-        p {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
     }
 </style>
