--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import LinkButton from '../components/LinkButton.astro';
 import Footer from '../components/Footer.astro';
 
-export interface Props {
+interface Props {
     title: string;
 }
 ---
