--- a/src/components/Document.astro
+++ b/src/components/Document.astro
@@ -1,5 +1,7 @@
 ---
 import GlobalStyles from "./GlobalStyles.astro";
+import '@fontsource/space-grotesk';
+import '@fontsource/manrope';
 const { title = "Joshua Germon" } = Astro.props;
 ---
 
@@ -8,7 +10,7 @@ const { title = "Joshua Germon" } = Astro.props;
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="icon" type="image/png" href="/favicon.png" />
         <meta name="generator" content={Astro.generator} />
         <meta name="description"
             content="Developer and designer experimenting with technology to create digital experiences and trying to push the boundaries of what is expected and safe.">
