--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -13,8 +13,8 @@
 		--border-color-dark: #434a5b;
 		--hover-color-dark: #2f3645;
 		--body-font-size: 1rem;
-		--heading-font: 'Space Grotesk', sans-serif;
-  		--body-font: Manrope, sans-serif;
+		--heading-font: "Space Grotesk", sans-serif;
+  		--body-font: "Manrope", sans-serif;
 		// Default dark
 		--bg-color: var(--bg-color-dark);
 		--body-color: var(--body-color-dark);
@@ -73,7 +73,7 @@
 	h1, h2, h3, h4, h5, h6 {
 		font-family: var(--heading-font);
 		line-height: 1.25;
-		font-weight: 500;
+		font-weight: 700;
 		transition: color 300ms ease;
 	}
 	span, p, a, button, li {
