--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,30 +1,28 @@
 ---
 import LinkButton from '../../components/LinkButton.astro';
+import WordCount from '../../components/WordCount.astro';
 import Layout from '../../layouts/Layout.astro';
 const posts = await Astro.glob('./*.md');
 posts.sort((a, b) => Date.parse(b.frontmatter.date) - Date.parse(a.frontmatter.date));
-console.log(posts);
 ---
 
 <Layout title="Joshua Germon - Posts">
 	<div class="latest-posts">
 		<h1>Logs</h1>
-		<div class="posts"> {posts.map(post => (
-			<a href={post.url}>
+		<div class="posts"> {posts.map(post => ( <a href={post.url}>
 				<article>
 					<h2>{post.frontmatter.title}</h2>
 					<p>{post.frontmatter.excerpt}</p>
 				</article>
 			</a>))} </div>
-		</div>
-		<LinkButton href="/" variant="ghost">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-arrow-return-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
-            </svg>
-             Back Home
-        </LinkButton>
+	</div>
+	<LinkButton href="/" variant="ghost">
+		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+			class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+			<path fill-rule="evenodd"
+				d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z" />
+		</svg> Back Home
+	</LinkButton>
 </Layout>
 <style>
 	.intro {
@@ -57,14 +55,17 @@ console.log(posts);
 		transition: background-color 300ms ease, border-color 300ms ease;
 		padding: 1rem 1.333rem
 	}
+
 	article:hover {
 		background-color: var(--hover-color);
 	}
+
 	article h2 {
 		font-size: 1rem;
 		margin-top: 0;
 		margin-bottom: 0.333rem;
 	}
+
 	article p {
 		font-size: 0.85rem;
 		margin: 0;
