--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const latestPosts = posts.slice(0, 5);
 		<p>Beautiful aesthetics and thoughtful design in all forms, real life or digital, bring me happiness. Always
 			exploring, always learning and trying to break things in the best way possible.</p>
 	</div>
-	<div class="latest-posts">
+	<!-- <div class="latest-posts">
 		<h2>Logs</h2>
 		<div class="posts"> {latestPosts.map(post => (
 			<a href={post.url} rel="prefetch">
@@ -29,7 +29,7 @@ const latestPosts = posts.slice(0, 5);
 			 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-right" viewBox="0 0 16 16">
 				<path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5z"/>
 			  </svg>
-        </LinkButton>
+        </LinkButton> -->
 </Layout>
 <style>
 	.intro {
