--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import './src/styles/global.css'
+import '../styles/global.css'
 import Footer from '../components/Footer.astro';
 import Document from '../components/Document.astro';
 import Header from '../components/Header.astro';
